projects/examples/source/02.38.cpp
/////////////////////////////////////////////////////////////////

// support : en.wikipedia.org/wiki/X86_calling_conventions

/////////////////////////////////////////////////////////////////

#include <tuple>
#include <type_traits>

/////////////////////////////////////////////////////////////////

[[nodiscard]] auto test(int x);

/////////////////////////////////////////////////////////////////

[[nodiscard]] auto test(int x) // support : compiler-explorer.com
{
	return x;
}

/////////////////////////////////////////////////////////////////

int main()
{
    static_assert(std::is_same_v < decltype(test), int(int) > );

//  ------------------------------------------------------------

//	test(1); // error

//  ------------------------------------------------------------

    [[maybe_unused]] auto x = test(1);

//  ------------------------------------------------------------

    std::ignore = test(1);
}

/////////////////////////////////////////////////////////////////